# HD2D-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
assets/: manifest.json
assets/characters/protagonist/: animations.json  manifest.json
assets/characters/test/: animations.json
assets/locales/: en.json  ja.json
assets/maps/: demo-village.mapdata  map.ply  test_terrain.ply
assets/props/: house.ply  rock.ply  tree.ply
assets/scenes/: dungeon.json  gs_demo.json  test_scene.json  test_scene.json.bk
assets/scripts/: engine.wren  npc_greeting.wren  npc_patrol.wren
docs/: gs-performance-report.md
include/gseurat/demo/: demo_app.hpp  gs_demo_state.hpp
include/gseurat/engine/: camera.hpp  collision_gen.hpp  gaussian_cloud.hpp  gs_chunk_grid.hpp  gs_renderer.hpp  pathfinder.hpp  scene_loader.hpp
include/gseurat/engine/ecs/: default_components.hpp
include/vulkan_game/: app.hpp
include/vulkan_game/demo/: demo_app.hpp  demo_gameplay_state.hpp  gs_demo_app.hpp  gs_demo_state.hpp
include/vulkan_game/engine/: app_base.hpp  async_loader.hpp  buffer.hpp  camera.hpp  collision_gen.hpp  control_server.hpp  feature_flags.hpp  game_state.hpp  gaussian_cloud.hpp  gs_chunk_grid.hpp  gs_chunk_streamer.hpp  gs_parallax_camera.hpp  gs_renderer.hpp  input_manager.hpp  parallax_layer.hpp  particle.hpp  pipeline.hpp  post_process.hpp  renderer.hpp  resource_cache.hpp  resource_handle.hpp  resource_manager.hpp  save_system.hpp  scene.hpp  scene_loader.hpp  screen_effects.hpp  sprite_batch.hpp  texture.hpp  tilemap.hpp  types.hpp  weather_system.hpp
include/vulkan_game/engine/ecs/: archetype.hpp  default_components.hpp  world.hpp
include/vulkan_game/engine/scripting/: script_system.hpp  wren_bindings.hpp  wren_vm.hpp
include/vulkan_game/game/: components.hpp  systems.hpp
include/vulkan_game/game/states/: gameplay_state.hpp  pause_state.hpp  title_state.hpp  transition_state.hpp
scripts/: generate_test_props.py  generate_test_scene.py  generate_test_terrain.py  ply_utils.py
shaders/: CMakeLists.txt  bloom_blur.frag  bloom_extract.frag  composite.frag  fullscreen.vert  gs_preprocess.comp  gs_radix_histogram.comp  gs_radix_scan.comp  gs_radix_scatter.comp  gs_render.comp  gs_sort.comp  sprite.frag  sprite.vert
src/: app.cpp  gs_demo_main.cpp  main.cpp
src/demo/: demo_app.cpp  demo_gameplay_state.cpp  gs_demo_app.cpp  gs_demo_state.cpp
src/engine/: app_base.cpp  async_loader.cpp  buffer.cpp  camera.cpp  collision_gen.cpp  control_server.cpp  descriptor.cpp  game_state.cpp  gaussian_cloud.cpp  gs_chunk_grid.cpp  gs_chunk_streamer.cpp  gs_parallax_camera.cpp  gs_renderer.cpp  input_manager.cpp  parallax_layer.cpp  particle.cpp  pathfinder.cpp  pipeline.cpp  post_process.cpp  renderer.cpp  resource_manager.cpp  save_system.cpp  scene.cpp  scene_loader.cpp  screen_effects.cpp  sprite_batch.cpp  texture.cpp  tilemap.cpp  weather_system.cpp
src/engine/scripting/: script_system.cpp  wren_bindings.cpp  wren_vm.cpp
src/game/: gameplay_state.cpp  pause_state.cpp  systems.cpp  title_state.cpp  transition_state.cpp
tests/: README.md  test_async_loader.cpp  test_feature_flags.cpp  test_gaussian_cloud.cpp  test_gs_chunk_streamer.cpp  test_tilemap.cpp
tools/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  setup.sh
tools/apps/audio-composer/: README.md  index.html  package.json
tools/apps/audio-composer/src/: App.tsx
tools/apps/audio-composer/src/components/: AIGeneratePanel.tsx  AudioPlayer.tsx  MusicStateEditor.tsx  TrackTimeline.tsx  WaveformDisplay.tsx
tools/apps/audio-composer/src/hooks/: useSaRemoteGeneration.ts
tools/apps/audio-composer/src/store/: useComposerStore.ts
tools/apps/bricklayer/: package.json
tools/apps/bricklayer/src/: App.tsx
tools/apps/bricklayer/src/components/: NumberInput.tsx
tools/apps/bricklayer/src/lib/: depthEstimate.ts  plyExport.ts  projectIO.ts  sceneExport.ts  voxImport.ts
tools/apps/bricklayer/src/panels/: BackgroundTab.tsx  CharacterTab.tsx  EntitiesTab.tsx  GaussianTab.tsx  ImportDialog.tsx  Inspector.tsx  LightsTab.tsx  MenuBar.tsx  NavZoneTab.tsx  ObjectsTab.tsx  ScenePropertiesPanel.tsx  SceneTab.tsx  SceneTreePanel.tsx  SettingsLeftPanel.tsx  SettingsRightPanel.tsx  TerrainLeftPanel.tsx  TerrainRightPanel.tsx  ToolBar.tsx  VfxTab.tsx  WeatherTab.tsx
tools/apps/bricklayer/src/store/: types.ts  useSceneStore.ts
tools/apps/bricklayer/src/viewport/: CollisionOverlay.tsx  GrabOverlay.tsx  LightGizmos.tsx  ObjectMarkers.tsx  Viewport.tsx  VoxelMesh.tsx
tools/apps/bridge/: package.json
tools/apps/bridge/src/: index.ts  request-tracker.ts  unix-client.ts  ws-server.ts
tools/apps/echidna/: index.html  package.json  vite.config.ts
tools/apps/echidna/src/: App.tsx
tools/apps/keyframe-animator/: index.html  package.json
tools/apps/keyframe-animator/src/: App.tsx
tools/apps/level-designer/src/: App.tsx
tools/apps/map-painter/: index.html  package.json  vite.config.ts
tools/apps/map-painter/scripts/: generate-demo-map.mjs
tools/apps/map-painter/src/: App.tsx  main.tsx
tools/apps/particle-designer/: index.html  package.json
tools/apps/particle-designer/src/: App.tsx
tools/apps/pixel-painter/: README.md  index.html  package.json
tools/apps/pixel-painter/src/: App.tsx
tools/apps/seurat/: README.md  SKILL.md  vite.config.ts
tools/apps/seurat/src/: App.tsx
tools/apps/sfx-designer/: README.md  index.html  package.json
tools/apps/sfx-designer/src/: App.tsx
tools/docs/: comfyui-asset-generation-report.md
tools/scripts/: sa-remote-generate.mjs  stable-audio-server.py
tools/tests/: package.json  qa-results.json
tools/tests/src/: ai-generate-helpers.test.ts  bricklayer-project.test.ts  bricklayer-store.test.ts  echidna-ply-export.test.ts  map-painter.scenario.ts  map-painter.test.ts  normal-map.test.ts  pixel-painter.scenario.ts  pixel-painter.test.ts  pose-templates.test.ts  qa-runner.ts  remote-commands.test.ts  seurat-ui-scenario.test.ts  seurat-ui.test.ts  seurat.scenario.ts  seurat.test.ts
tools/twopass-experiments/: run-experiments.ts
(+109 files in other folders)
